# analyzer/openapi.yml
@@ -21,6 +21,17 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/HealthResponse"
+  /stats:
+    get:
+      summary: gets the event stats
+      operationId: app.get_event_stats
+      responses:
+        '200':
+          description: sucessfully returned the storage stats
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Stats"
   /todo/checklist-items:
     get:
       summary: Get a checklist-item event by index
@@ -100,6 +111,18 @@ components:
         status:
           type: string
           example: Analyzer is healthy
+    Stats:
+      type: object
+      required:
+        - num_temp
+        - num_precip
+      properties:
+        num_temp:
+          type: integer
+          example: 100
+        num_precip:
+          type: integer
+          example: 100
     AnalyzerEvent:
       type: object
       required:
